; ModuleID = '/home/carl/AnghaBench/linux/drivers/net/phy/extr_phylink.c_phylink_fixed_state_cb.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/net/phy/extr_phylink.c_phylink_fixed_state_cb.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.phylink = type { i64, void (%struct.net_device*, %struct.phylink_link_state*)*, i32 }
%struct.net_device = type opaque
%struct.phylink_link_state = type opaque
%struct.net_device.0 = type opaque
%struct.phylink_link_state.1 = type opaque

@MLO_AN_FIXED = common dso_local global i64 0, align 8
@EINVAL = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @phylink_fixed_state_cb(%struct.phylink* %0, void (%struct.net_device.0*, %struct.phylink_link_state.1*)* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.phylink*, align 8
  %5 = alloca void (%struct.net_device.0*, %struct.phylink_link_state.1*)*, align 8
  store %struct.phylink* %0, %struct.phylink** %4, align 8
  store void (%struct.net_device.0*, %struct.phylink_link_state.1*)* %1, void (%struct.net_device.0*, %struct.phylink_link_state.1*)** %5, align 8
  %6 = load %struct.phylink*, %struct.phylink** %4, align 8
  %7 = getelementptr inbounds %struct.phylink, %struct.phylink* %6, i32 0, i32 0
  %8 = load i64, i64* %7, align 8
  %9 = load i64, i64* @MLO_AN_FIXED, align 8
  %10 = icmp ne i64 %8, %9
  br i1 %10, label %11, label %14

11:                                               ; preds = %2
  %12 = load i32, i32* @EINVAL, align 4
  %13 = sub nsw i32 0, %12
  store i32 %13, i32* %3, align 4
  br label %25

14:                                               ; preds = %2
  %15 = load %struct.phylink*, %struct.phylink** %4, align 8
  %16 = getelementptr inbounds %struct.phylink, %struct.phylink* %15, i32 0, i32 2
  %17 = call i32 @mutex_lock(i32* %16)
  %18 = load void (%struct.net_device.0*, %struct.phylink_link_state.1*)*, void (%struct.net_device.0*, %struct.phylink_link_state.1*)** %5, align 8
  %19 = bitcast void (%struct.net_device.0*, %struct.phylink_link_state.1*)* %18 to void (%struct.net_device*, %struct.phylink_link_state*)*
  %20 = load %struct.phylink*, %struct.phylink** %4, align 8
  %21 = getelementptr inbounds %struct.phylink, %struct.phylink* %20, i32 0, i32 1
  store void (%struct.net_device*, %struct.phylink_link_state*)* %19, void (%struct.net_device*, %struct.phylink_link_state*)** %21, align 8
  %22 = load %struct.phylink*, %struct.phylink** %4, align 8
  %23 = getelementptr inbounds %struct.phylink, %struct.phylink* %22, i32 0, i32 2
  %24 = call i32 @mutex_unlock(i32* %23)
  store i32 0, i32* %3, align 4
  br label %25

25:                                               ; preds = %14, %11
  %26 = load i32, i32* %3, align 4
  ret i32 %26
}

declare dso_local i32 @mutex_lock(i32*) #1

declare dso_local i32 @mutex_unlock(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
